[package]
name = "maze-runner"
version = "0.5.0"
edition = "2021"
authors = ["Witold Lipieta <witek103@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.3.3", features = ["serde"] }
postcard = { version = "1.0.6", features = ["use-std"] }
rand = "0.8.5"
serde = "1.0.178"
